[tool.poetry]
name = "hexlet-project"
version = "0.1.0"
description = ""
authors = ["bryzgin <k.bryzgin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
